y.output
Nonterminals useless in grammar

    class_name
    try_block
    catch_block_list
    catch_block


Terminals unused in grammar

    OPERATOR
    TEMPLATE
    FRIEND
    THROW
    TRY
    CATCH


Rules useless in grammar

  258 class_name: IDENTIFIER

  259 try_block: TRY compound_statement catch_block_list

  260 catch_block_list: catch_block
  261                 | catch_block_list catch_block

  262 catch_block: CATCH '(' parameter_declaration ')' compound_statement


State 49 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 161 conflicts: 11 shift/reduce
State 164 conflicts: 3 shift/reduce
State 165 conflicts: 2 shift/reduce
State 166 conflicts: 2 shift/reduce
State 167 conflicts: 4 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce
State 171 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce
State 173 conflicts: 2 shift/reduce
State 243 conflicts: 3 shift/reduce
State 246 conflicts: 1 shift/reduce
State 329 conflicts: 2 shift/reduce
State 331 conflicts: 2 shift/reduce
State 347 conflicts: 3 shift/reduce
State 348 conflicts: 3 shift/reduce
State 349 conflicts: 2 shift/reduce
State 350 conflicts: 2 shift/reduce
State 351 conflicts: 2 shift/reduce
State 352 conflicts: 2 shift/reduce
State 353 conflicts: 2 shift/reduce
State 354 conflicts: 2 shift/reduce
State 355 conflicts: 4 shift/reduce
State 356 conflicts: 4 shift/reduce
State 357 conflicts: 2 shift/reduce
State 358 conflicts: 1 shift/reduce
State 359 conflicts: 1 shift/reduce
State 360 conflicts: 1 shift/reduce
State 361 conflicts: 1 shift/reduce
State 392 conflicts: 2 shift/reduce
State 398 conflicts: 1 shift/reduce
State 410 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 expression_list: assignment_expression
    2                | expression_list ',' assignment_expression

    3 class_specifier: CLASS IDENTIFIER '{' class_body '}'
    4                | CLASS IDENTIFIER ':' base_specifier_list '{' class_body '}'
    5                | CLASS IDENTIFIER
    6                | CLASS '{' class_body '}'

    7 base_specifier_list: base_specifier
    8                    | base_specifier_list ',' base_specifier

    9 base_specifier: IDENTIFIER
   10               | VIRTUAL IDENTIFIER
   11               | access_specifier IDENTIFIER
   12               | VIRTUAL access_specifier IDENTIFIER

   13 class_body: class_member_declaration
   14           | class_body class_member_declaration

   15 class_member_declaration: access_specifier ':'
   16                         | member_declaration

   17 access_specifier: PRIVATE
   18                 | PROTECTED
   19                 | PUBLIC

   20 member_declaration: declaration
   21                   | member_function_definition
   22                   | constructor_definition
   23                   | destructor_definition

   24 member_function_definition: declaration_specifiers declarator compound_statement

   25 constructor_definition: IDENTIFIER '(' parameter_list ')' constructor_initializer compound_statement
   26                       | IDENTIFIER '(' ')' constructor_initializer compound_statement

   27 constructor_initializer: ':' member_initializer_list
   28                        | ε

   29 member_initializer_list: member_initializer
   30                        | member_initializer_list ',' member_initializer

   31 member_initializer: IDENTIFIER '(' expression_list ')'
   32                   | IDENTIFIER '(' ')'

   33 destructor_definition: '~' IDENTIFIER '(' ')' compound_statement

   34 declaration_specifiers: storage_class_specifier
   35                       | storage_class_specifier declaration_specifiers
   36                       | type_specifier
   37                       | type_specifier declaration_specifiers
   38                       | type_qualifier
   39                       | type_qualifier declaration_specifiers
   40                       | class_specifier
   41                       | class_specifier declaration_specifiers

   42 type_specifier: VOID
   43               | CHAR
   44               | SHORT
   45               | INT
   46               | LONG
   47               | FLOAT
   48               | DOUBLE
   49               | SIGNED
   50               | UNSIGNED
   51               | struct_or_union_specifier
   52               | enum_specifier
   53               | TYPE_NAME

   54 new_expression: NEW type_name
   55               | NEW type_name '(' expression_list ')'
   56               | NEW type_name '[' expression ']'

   57 delete_expression: DELETE expression
   58                  | DELETE '[' ']' expression

   59 primary_expression: IDENTIFIER
   60                   | CONSTANT
   61                   | STRING_LITERAL
   62                   | '(' expression ')'
   63                   | THIS

   64 namespace_definition: NAMESPACE IDENTIFIER '{' translation_unit '}'
   65                     | NAMESPACE '{' translation_unit '}'

   66 using_directive: USING NAMESPACE IDENTIFIER ';'

   67 external_declaration: function_definition
   68                     | declaration
   69                     | namespace_definition
   70                     | using_directive

   71 postfix_expression: primary_expression
   72                   | postfix_expression '[' expression ']'
   73                   | postfix_expression '(' ')'
   74                   | postfix_expression '(' argument_expression_list ')'
   75                   | postfix_expression '.' IDENTIFIER
   76                   | postfix_expression PTR_OP IDENTIFIER
   77                   | postfix_expression INC_OP
   78                   | postfix_expression DEC_OP
   79                   | '(' type_name ')' '{' initializer_list '}'
   80                   | '(' type_name ')' '{' initializer_list ',' '}'

   81 argument_expression_list: assignment_expression
   82                         | argument_expression_list ',' assignment_expression

   83 unary_expression: postfix_expression
   84                 | INC_OP unary_expression
   85                 | DEC_OP unary_expression
   86                 | unary_operator cast_expression
   87                 | SIZEOF unary_expression
   88                 | SIZEOF '(' type_name ')'
   89                 | new_expression
   90                 | delete_expression

   91 unary_operator: '&'
   92               | '*'
   93               | '+'
   94               | '-'
   95               | '~'
   96               | '!'

   97 cast_expression: unary_expression
   98                | '(' type_name ')' cast_expression

   99 multiplicative_expression: cast_expression
  100                          | multiplicative_expression '*' cast_expression
  101                          | multiplicative_expression '/' cast_expression
  102                          | multiplicative_expression '%' cast_expression

  103 additive_expression: multiplicative_expression
  104                    | additive_expression '+' multiplicative_expression
  105                    | additive_expression '-' multiplicative_expression

  106 shift_expression: additive_expression
  107                 | shift_expression LEFT_OP additive_expression
  108                 | shift_expression RIGHT_OP additive_expression

  109 relational_expression: shift_expression
  110                      | relational_expression '<' shift_expression
  111                      | relational_expression '>' shift_expression
  112                      | relational_expression LE_OP shift_expression
  113                      | relational_expression GE_OP shift_expression

  114 equality_expression: relational_expression
  115                    | equality_expression EQ_OP relational_expression
  116                    | equality_expression NE_OP relational_expression

  117 and_expression: equality_expression
  118               | and_expression '&' equality_expression

  119 exclusive_or_expression: and_expression
  120                        | exclusive_or_expression '^' and_expression

  121 inclusive_or_expression: exclusive_or_expression
  122                        | inclusive_or_expression '|' exclusive_or_expression

  123 logical_and_expression: inclusive_or_expression
  124                       | logical_and_expression AND_OP inclusive_or_expression

  125 logical_or_expression: logical_and_expression
  126                      | logical_or_expression OR_OP logical_and_expression

  127 conditional_expression: logical_or_expression
  128                       | logical_or_expression '?' expression ':' conditional_expression

  129 assignment_expression: conditional_expression
  130                      | unary_expression assignment_operator assignment_expression

  131 assignment_operator: '='
  132                    | MUL_ASSIGN
  133                    | DIV_ASSIGN
  134                    | MOD_ASSIGN
  135                    | ADD_ASSIGN
  136                    | SUB_ASSIGN
  137                    | LEFT_ASSIGN
  138                    | RIGHT_ASSIGN
  139                    | AND_ASSIGN
  140                    | XOR_ASSIGN
  141                    | OR_ASSIGN

  142 expression: assignment_expression
  143           | expression ',' assignment_expression

  144 constant_expression: conditional_expression

  145 declaration: declaration_specifiers ';'
  146            | declaration_specifiers init_declarator_list ';'

  147 init_declarator_list: init_declarator
  148                     | init_declarator_list ',' init_declarator

  149 init_declarator: declarator
  150                | declarator '=' initializer

  151 storage_class_specifier: TYPEDEF
  152                        | EXTERN
  153                        | STATIC
  154                        | AUTO
  155                        | REGISTER

  156 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  157                          | struct_or_union '{' struct_declaration_list '}'
  158                          | struct_or_union IDENTIFIER

  159 struct_or_union: STRUCT
  160                | UNION

  161 struct_declaration_list: struct_declaration
  162                        | struct_declaration_list struct_declaration

  163 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  164 specifier_qualifier_list: type_specifier specifier_qualifier_list
  165                         | type_specifier
  166                         | type_qualifier specifier_qualifier_list
  167                         | type_qualifier

  168 struct_declarator_list: struct_declarator
  169                       | struct_declarator_list ',' struct_declarator

  170 struct_declarator: declarator
  171                  | ':' constant_expression
  172                  | declarator ':' constant_expression

  173 enum_specifier: ENUM '{' enumerator_list '}'
  174               | ENUM IDENTIFIER '{' enumerator_list '}'
  175               | ENUM IDENTIFIER

  176 enumerator_list: enumerator
  177                | enumerator_list ',' enumerator

  178 enumerator: IDENTIFIER
  179           | IDENTIFIER '=' constant_expression

  180 type_qualifier: CONST
  181               | VOLATILE

  182 declarator: pointer direct_declarator
  183           | direct_declarator

  184 direct_declarator: IDENTIFIER
  185                  | '(' declarator ')'
  186                  | direct_declarator '[' constant_expression ']'
  187                  | direct_declarator '[' ']'
  188                  | direct_declarator '(' parameter_type_list ')'
  189                  | direct_declarator '(' identifier_list ')'
  190                  | direct_declarator '(' ')'

  191 pointer: '*'
  192        | '*' type_qualifier_list
  193        | '*' pointer
  194        | '*' type_qualifier_list pointer

  195 type_qualifier_list: type_qualifier
  196                    | type_qualifier_list type_qualifier

  197 parameter_type_list: parameter_list
  198                    | parameter_list ',' ELLIPSIS

  199 parameter_list: parameter_declaration
  200               | parameter_list ',' parameter_declaration

  201 parameter_declaration: declaration_specifiers declarator
  202                      | declaration_specifiers

  203 identifier_list: IDENTIFIER
  204                | identifier_list ',' IDENTIFIER

  205 type_name: specifier_qualifier_list
  206          | specifier_qualifier_list abstract_declarator

  207 abstract_declarator: pointer
  208                    | direct_abstract_declarator
  209                    | pointer direct_abstract_declarator

  210 direct_abstract_declarator: '(' abstract_declarator ')'
  211                           | '[' ']'
  212                           | '[' constant_expression ']'
  213                           | direct_abstract_declarator '[' ']'
  214                           | direct_abstract_declarator '[' constant_expression ']'
  215                           | '(' ')'
  216                           | '(' parameter_type_list ')'
  217                           | direct_abstract_declarator '(' ')'
  218                           | direct_abstract_declarator '(' parameter_type_list ')'

  219 initializer: assignment_expression
  220            | '{' initializer_list '}'
  221            | '{' initializer_list ',' '}'

  222 initializer_list: initializer
  223                 | initializer_list ',' initializer

  224 statement: labeled_statement
  225          | compound_statement
  226          | expression_statement
  227          | selection_statement
  228          | iteration_statement
  229          | jump_statement

  230 labeled_statement: IDENTIFIER ':' statement
  231                  | CASE constant_expression ':' statement
  232                  | DEFAULT ':' statement

  233 compound_statement: '{' '}'
  234                   | '{' statement_list '}'
  235                   | '{' declaration_list '}'
  236                   | '{' declaration_list statement_list '}'

  237 declaration_list: declaration
  238                 | declaration_list declaration

  239 statement_list: statement
  240               | statement_list statement

  241 expression_statement: ';'
  242                     | expression ';'

  243 selection_statement: IF '(' expression ')' statement
  244                    | IF '(' expression ')' statement ELSE statement
  245                    | SWITCH '(' expression ')' statement

  246 iteration_statement: WHILE '(' expression ')' statement
  247                    | DO statement WHILE '(' expression ')' ';'
  248                    | FOR '(' expression_statement expression_statement ')' statement
  249                    | FOR '(' expression_statement expression_statement expression ')' statement

  250 jump_statement: GOTO IDENTIFIER ';'
  251               | CONTINUE ';'
  252               | BREAK ';'
  253               | RETURN ';'
  254               | RETURN expression ';'

  255 translation_unit: external_declaration
  256                 | translation_unit external_declaration

  257 function_definition: declaration_specifiers declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 96
    '%' (37) 102
    '&' (38) 91 118
    '(' (40) 25 26 31 32 33 55 62 73 74 79 80 88 98 185 188 189 190 210 215 216 217 218 243 244 245 246 247 248 249
    ')' (41) 25 26 31 32 33 55 62 73 74 79 80 88 98 185 188 189 190 210 215 216 217 218 243 244 245 246 247 248 249
    '*' (42) 92 100 191 192 193 194
    '+' (43) 93 104
    ',' (44) 2 8 30 80 82 143 148 169 177 198 200 204 221 223
    '-' (45) 94 105
    '.' (46) 75
    '/' (47) 101
    ':' (58) 4 15 27 128 171 172 230 231 232
    ';' (59) 66 145 146 163 241 242 247 250 251 252 253 254
    '<' (60) 110
    '=' (61) 131 150 179
    '>' (62) 111
    '?' (63) 128
    '[' (91) 56 58 72 186 187 211 212 213 214
    ']' (93) 56 58 72 186 187 211 212 213 214
    '^' (94) 120
    '{' (123) 3 4 6 64 65 79 80 156 157 173 174 220 221 233 234 235 236
    '|' (124) 122
    '}' (125) 3 4 6 64 65 79 80 156 157 173 174 220 221 233 234 235 236
    '~' (126) 33 95
    error (256)
    IDENTIFIER (258) 3 4 5 9 10 11 12 25 26 31 32 33 59 64 66 75 76 156 158 174 175 178 179 184 203 204 230 250
    CONSTANT (259) 60
    STRING_LITERAL (260) 61
    SIZEOF (261) 87 88
    PTR_OP (262) 76
    INC_OP (263) 77 84
    DEC_OP (264) 78 85
    LEFT_OP (265) 107
    RIGHT_OP (266) 108
    LE_OP (267) 112
    GE_OP (268) 113
    EQ_OP (269) 115
    NE_OP (270) 116
    AND_OP (271) 124
    OR_OP (272) 126
    MUL_ASSIGN (273) 132
    DIV_ASSIGN (274) 133
    MOD_ASSIGN (275) 134
    ADD_ASSIGN (276) 135
    SUB_ASSIGN (277) 136
    LEFT_ASSIGN (278) 137
    RIGHT_ASSIGN (279) 138
    AND_ASSIGN (280) 139
    XOR_ASSIGN (281) 140
    OR_ASSIGN (282) 141
    TYPE_NAME (283) 53
    TYPEDEF (284) 151
    EXTERN (285) 152
    STATIC (286) 153
    AUTO (287) 154
    REGISTER (288) 155
    CHAR (289) 43
    SHORT (290) 44
    INT (291) 45
    LONG (292) 46
    SIGNED (293) 49
    UNSIGNED (294) 50
    FLOAT (295) 47
    DOUBLE (296) 48
    CONST (297) 180
    VOLATILE (298) 181
    VOID (299) 42
    STRUCT (300) 159
    UNION (301) 160
    ENUM (302) 173 174 175
    ELLIPSIS (303) 198
    CASE (304) 231
    DEFAULT (305) 232
    IF (306) 243 244
    ELSE (307) 244
    SWITCH (308) 245
    WHILE (309) 246 247
    DO (310) 247
    FOR (311) 248 249
    GOTO (312) 250
    CONTINUE (313) 251
    BREAK (314) 252
    RETURN (315) 253 254
    CLASS (316) 3 4 5 6
    PRIVATE (317) 17
    PUBLIC (318) 19
    PROTECTED (319) 18
    VIRTUAL (320) 10 12
    NEW (321) 54 55 56
    DELETE (322) 57 58
    THIS (323) 63
    OPERATOR (324)
    TEMPLATE (325)
    FRIEND (326)
    NAMESPACE (327) 64 65 66
    USING (328) 66
    THROW (329)
    TRY (330)
    CATCH (331)


Nonterminals, with rules where they appear

    $accept (101)
        on left: 0
    expression_list (102)
        on left: 1 2
        on right: 2 31 55
    class_specifier (103)
        on left: 3 4 5 6
        on right: 40 41
    base_specifier_list (104)
        on left: 7 8
        on right: 4 8
    base_specifier (105)
        on left: 9 10 11 12
        on right: 7 8
    class_body (106)
        on left: 13 14
        on right: 3 4 6 14
    class_member_declaration (107)
        on left: 15 16
        on right: 13 14
    access_specifier (108)
        on left: 17 18 19
        on right: 11 12 15
    member_declaration (109)
        on left: 20 21 22 23
        on right: 16
    member_function_definition (110)
        on left: 24
        on right: 21
    constructor_definition (111)
        on left: 25 26
        on right: 22
    constructor_initializer (112)
        on left: 27 28
        on right: 25 26
    member_initializer_list (113)
        on left: 29 30
        on right: 27 30
    member_initializer (114)
        on left: 31 32
        on right: 29 30
    destructor_definition (115)
        on left: 33
        on right: 23
    declaration_specifiers (116)
        on left: 34 35 36 37 38 39 40 41
        on right: 24 35 37 39 41 145 146 201 202 257
    type_specifier (117)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 36 37 164 165
    new_expression (118)
        on left: 54 55 56
        on right: 89
    delete_expression (119)
        on left: 57 58
        on right: 90
    primary_expression (120)
        on left: 59 60 61 62 63
        on right: 71
    namespace_definition (121)
        on left: 64 65
        on right: 69
    using_directive (122)
        on left: 66
        on right: 70
    external_declaration (123)
        on left: 67 68 69 70
        on right: 255 256
    postfix_expression (124)
        on left: 71 72 73 74 75 76 77 78 79 80
        on right: 72 73 74 75 76 77 78 83
    argument_expression_list (125)
        on left: 81 82
        on right: 74 82
    unary_expression (126)
        on left: 83 84 85 86 87 88 89 90
        on right: 84 85 87 97 130
    unary_operator (127)
        on left: 91 92 93 94 95 96
        on right: 86
    cast_expression (128)
        on left: 97 98
        on right: 86 98 99 100 101 102
    multiplicative_expression (129)
        on left: 99 100 101 102
        on right: 100 101 102 103 104 105
    additive_expression (130)
        on left: 103 104 105
        on right: 104 105 106 107 108
    shift_expression (131)
        on left: 106 107 108
        on right: 107 108 109 110 111 112 113
    relational_expression (132)
        on left: 109 110 111 112 113
        on right: 110 111 112 113 114 115 116
    equality_expression (133)
        on left: 114 115 116
        on right: 115 116 117 118
    and_expression (134)
        on left: 117 118
        on right: 118 119 120
    exclusive_or_expression (135)
        on left: 119 120
        on right: 120 121 122
    inclusive_or_expression (136)
        on left: 121 122
        on right: 122 123 124
    logical_and_expression (137)
        on left: 123 124
        on right: 124 125 126
    logical_or_expression (138)
        on left: 125 126
        on right: 126 127 128
    conditional_expression (139)
        on left: 127 128
        on right: 128 129 144
    assignment_expression (140)
        on left: 129 130
        on right: 1 2 81 82 130 142 143 219
    assignment_operator (141)
        on left: 131 132 133 134 135 136 137 138 139 140 141
        on right: 130
    expression (142)
        on left: 142 143
        on right: 56 57 58 62 72 128 143 242 243 244 245 246 247 249 254
    constant_expression (143)
        on left: 144
        on right: 171 172 179 186 212 214 231
    declaration (144)
        on left: 145 146
        on right: 20 68 237 238
    init_declarator_list (145)
        on left: 147 148
        on right: 146 148
    init_declarator (146)
        on left: 149 150
        on right: 147 148
    storage_class_specifier (147)
        on left: 151 152 153 154 155
        on right: 34 35
    struct_or_union_specifier (148)
        on left: 156 157 158
        on right: 51
    struct_or_union (149)
        on left: 159 160
        on right: 156 157 158
    struct_declaration_list (150)
        on left: 161 162
        on right: 156 157 162
    struct_declaration (151)
        on left: 163
        on right: 161 162
    specifier_qualifier_list (152)
        on left: 164 165 166 167
        on right: 163 164 166 205 206
    struct_declarator_list (153)
        on left: 168 169
        on right: 163 169
    struct_declarator (154)
        on left: 170 171 172
        on right: 168 169
    enum_specifier (155)
        on left: 173 174 175
        on right: 52
    enumerator_list (156)
        on left: 176 177
        on right: 173 174 177
    enumerator (157)
        on left: 178 179
        on right: 176 177
    type_qualifier (158)
        on left: 180 181
        on right: 38 39 166 167 195 196
    declarator (159)
        on left: 182 183
        on right: 24 149 150 170 172 185 201 257
    direct_declarator (160)
        on left: 184 185 186 187 188 189 190
        on right: 182 183 186 187 188 189 190
    pointer (161)
        on left: 191 192 193 194
        on right: 182 193 194 207 209
    type_qualifier_list (162)
        on left: 195 196
        on right: 192 194 196
    parameter_type_list (163)
        on left: 197 198
        on right: 188 216 218
    parameter_list (164)
        on left: 199 200
        on right: 25 197 198 200
    parameter_declaration (165)
        on left: 201 202
        on right: 199 200
    identifier_list (166)
        on left: 203 204
        on right: 189 204
    type_name (167)
        on left: 205 206
        on right: 54 55 56 79 80 88 98
    abstract_declarator (168)
        on left: 207 208 209
        on right: 206 210
    direct_abstract_declarator (169)
        on left: 210 211 212 213 214 215 216 217 218
        on right: 208 209 213 214 217 218
    initializer (170)
        on left: 219 220 221
        on right: 150 222 223
    initializer_list (171)
        on left: 222 223
        on right: 79 80 220 221 223
    statement (172)
        on left: 224 225 226 227 228 229
        on right: 230 231 232 239 240 243 244 245 246 247 248 249
    labeled_statement (173)
        on left: 230 231 232
        on right: 224
    compound_statement (174)
        on left: 233 234 235 236
        on right: 24 25 26 33 225 257
    declaration_list (175)
        on left: 237 238
        on right: 235 236 238
    statement_list (176)
        on left: 239 240
        on right: 234 236 240
    expression_statement (177)
        on left: 241 242
        on right: 226 248 249
    selection_statement (178)
        on left: 243 244 245
        on right: 227
    iteration_statement (179)
        on left: 246 247 248 249
        on right: 228
    jump_statement (180)
        on left: 250 251 252 253 254
        on right: 229
    translation_unit (181)
        on left: 255 256
        on right: 0 64 65 256
    function_definition (182)
        on left: 257
        on right: 67


State 0

    0 $accept: • translation_unit $end

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    CHAR       shift, and go to state 7
    SHORT      shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    SIGNED     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    FLOAT      shift, and go to state 13
    DOUBLE     shift, and go to state 14
    CONST      shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    STRUCT     shift, and go to state 18
    UNION      shift, and go to state 19
    ENUM       shift, and go to state 20
    CLASS      shift, and go to state 21
    NAMESPACE  shift, and go to state 22
    USING      shift, and go to state 23

    class_specifier            go to state 24
    declaration_specifiers     go to state 25
    type_specifier             go to state 26
    namespace_definition       go to state 27
    using_directive            go to state 28
    external_declaration       go to state 29
    declaration                go to state 30
    storage_class_specifier    go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35
    translation_unit           go to state 36
    function_definition        go to state 37


State 1

   53 type_specifier: TYPE_NAME •

    $default  reduce using rule 53 (type_specifier)


State 2

  151 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 151 (storage_class_specifier)


State 3

  152 storage_class_specifier: EXTERN •

    $default  reduce using rule 152 (storage_class_specifier)


State 4

  153 storage_class_specifier: STATIC •

    $default  reduce using rule 153 (storage_class_specifier)


State 5

  154 storage_class_specifier: AUTO •

    $default  reduce using rule 154 (storage_class_specifier)


State 6

  155 storage_class_specifier: REGISTER •

    $default  reduce using rule 155 (storage_class_specifier)


State 7

   43 type_specifier: CHAR •

    $default  reduce using rule 43 (type_specifier)


State 8

   44 type_specifier: SHORT •

    $default  reduce using rule 44 (type_specifier)


State 9

   45 type_specifier: INT •

    $default  reduce using rule 45 (type_specifier)


State 10

   46 type_specifier: LONG •

    $default  reduce using rule 46 (type_specifier)


State 11

   49 type_specifier: SIGNED •

    $default  reduce using rule 49 (type_specifier)


State 12

   50 type_specifier: UNSIGNED •

    $default  reduce using rule 50 (type_specifier)


State 13

   47 type_specifier: FLOAT •

    $default  reduce using rule 47 (type_specifier)


State 14

   48 type_specifier: DOUBLE •

    $default  reduce using rule 48 (type_specifier)


State 15

  180 type_qualifier: CONST •

    $default  reduce using rule 180 (type_qualifier)


State 16

  181 type_qualifier: VOLATILE •

    $default  reduce using rule 181 (type_qualifier)


State 17

   42 type_specifier: VOID •

    $default  reduce using rule 42 (type_specifier)


State 18

  159 struct_or_union: STRUCT •

    $default  reduce using rule 159 (struct_or_union)


State 19

  160 struct_or_union: UNION •

    $default  reduce using rule 160 (struct_or_union)


State 20

  173 enum_specifier: ENUM • '{' enumerator_list '}'
  174               | ENUM • IDENTIFIER '{' enumerator_list '}'
  175               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 21

    3 class_specifier: CLASS • IDENTIFIER '{' class_body '}'
    4                | CLASS • IDENTIFIER ':' base_specifier_list '{' class_body '}'
    5                | CLASS • IDENTIFIER
    6                | CLASS • '{' class_body '}'

    IDENTIFIER  shift, and go to state 40
    '{'         shift, and go to state 41


State 22

   64 namespace_definition: NAMESPACE • IDENTIFIER '{' translation_unit '}'
   65                     | NAMESPACE • '{' translation_unit '}'

    IDENTIFIER  shift, and go to state 42
    '{'         shift, and go to state 43


State 23

   66 using_directive: USING • NAMESPACE IDENTIFIER ';'

    NAMESPACE  shift, and go to state 44


State 24

   40 declaration_specifiers: class_specifier •
   41                       | class_specifier • declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    CHAR       shift, and go to state 7
    SHORT      shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    SIGNED     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    FLOAT      shift, and go to state 13
    DOUBLE     shift, and go to state 14
    CONST      shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    STRUCT     shift, and go to state 18
    UNION      shift, and go to state 19
    ENUM       shift, and go to state 20
    CLASS      shift, and go to state 21

    $default  reduce using rule 40 (declaration_specifiers)

    class_specifier            go to state 24
    declaration_specifiers     go to state 45
    type_specifier             go to state 26
    storage_class_specifier    go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35


State 25

  145 declaration: declaration_specifiers • ';'
  146            | declaration_specifiers • init_declarator_list ';'
  257 function_definition: declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 46
    '('         shift, and go to state 47
    ';'         shift, and go to state 48
    '*'         shift, and go to state 49

    init_declarator_list  go to state 50
    init_declarator       go to state 51
    declarator            go to state 52
    direct_declarator     go to state 53
    pointer               go to state 54


State 26

   36 declaration_specifiers: type_specifier •
   37                       | type_specifier • declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    CHAR       shift, and go to state 7
    SHORT      shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    SIGNED     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    FLOAT      shift, and go to state 13
    DOUBLE     shift, and go to state 14
    CONST      shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    STRUCT     shift, and go to state 18
    UNION      shift, and go to state 19
    ENUM       shift, and go to state 20
    CLASS      shift, and go to state 21

    $default  reduce using rule 36 (declaration_specifiers)

    class_specifier            go to state 24
    declaration_specifiers     go to state 55
    type_specifier             go to state 26
    storage_class_specifier    go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35


State 27

   69 external_declaration: namespace_definition •

    $default  reduce using rule 69 (external_declaration)


State 28

   70 external_declaration: using_directive •

    $default  reduce using rule 70 (external_declaration)


State 29

  255 translation_unit: external_declaration •

    $default  reduce using rule 255 (translation_unit)


State 30

   68 external_declaration: declaration •

    $default  reduce using rule 68 (external_declaration)


State 31

   34 declaration_specifiers: storage_class_specifier •
   35                       | storage_class_specifier • declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    CHAR       shift, and go to state 7
    SHORT      shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    SIGNED     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    FLOAT      shift, and go to state 13
    DOUBLE     shift, and go to state 14
    CONST      shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    STRUCT     shift, and go to state 18
    UNION      shift, and go to state 19
    ENUM       shift, and go to state 20
    CLASS      shift, and go to state 21

    $default  reduce using rule 34 (declaration_specifiers)

    class_specifier            go to state 24
    declaration_specifiers     go to state 56
    type_specifier             go to state 26
    storage_class_specifier    go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35


State 32

   51 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 51 (type_specifier)


State 33

  156 struct_or_union_specifier: struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  157                          | struct_or_union • '{' struct_declaration_list '}'
  158                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 57
    '{'         shift, and go to state 58


State 34

   52 type_specifier: enum_specifier •

    $default  reduce using rule 52 (type_specifier)


State 35

   38 declaration_specifiers: type_qualifier •
   39                       | type_qualifier • declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    CHAR       shift, and go to state 7
    SHORT      shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    SIGNED     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    FLOAT      shift, and go to state 13
    DOUBLE     shift, and go to state 14
    CONST      shift, and go to state 15
    VOLATILE   shift, and go to state 16
    VOID       shift, and go to state 17
    STRUCT     shift, and go to state 18
    UNION      shift, and go to state 19
    ENUM       shift, and go to state 20
    CLASS      shift, and go to state 21

    $default  reduce using rule 38 (declaration_specifiers)

    class_specifier            go to state 24
    declaration_specifiers     go to state 59
    type_specifier             go to state 26
    storage_class_specifier    go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35


State 36

    0 $accept: translation_unit • $end
  256 translation_unit: translation_unit • external_declaration
